--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@ body,
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Noto Sans JP', sans-serif;;
 	font-weight: 700;
+	page-break-after: avoid;
 }
 
 img.capture {
